<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:hapticFeedbackEnabled="false"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/mi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/mi"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/vi"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vi"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:text="@string/vi"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/mi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mi" />

    <TextView
        android:id="@+id/dealer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:longClickable="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        app:backgroundTint="#6200EE"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/dealer"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:contentDescription="@string/button"
        android:focusable="true" />

    <TextView
        android:id="@+id/sumaMi"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/fab"
        app:layout_constraintEnd_toEndOf="@+id/mi"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/mi" />

    <TextView
        android:id="@+id/sumaVi"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/sumaMi"
        app:layout_constraintEnd_toEndOf="@+id/vi"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/vi" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:divider="@android:drawable/divider_horizontal_textfield"
        android:dividerPadding="35dp"
        android:gravity="center_horizontal"
        android:isScrollContainer="false"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toTopOf="@+id/sumaVi"
        app:layout_constraintEnd_toStartOf="@+id/linear2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mi"
        app:layout_constraintVertical_bias="0.607">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:divider="@android:drawable/divider_horizontal_textfield"
        android:dividerPadding="35dp"
        android:gravity="center_horizontal"
        android:isScrollContainer="false"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toTopOf="@+id/sumaVi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linear1"
        app:layout_constraintTop_toBottomOf="@+id/vi"
        app:layout_constraintVertical_bias="0.596">

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>